src/objects/fc_csc__Promise_to_Pay__c.object
<CustomObject>
    <fields>
        <fullName>fc_csc__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promises to Pay</relationshipLabel>
        <relationshipName>Promises_to_Pay</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fc_csc__Aging_Bucket__c</fullName>
        <formula>IF (fc_csc__Days_Overdue__c &gt; 0 &amp;&amp; fc_csc__Days_Overdue__c &lt;= 30, &quot;1-30&quot;,
  IF (fc_csc__Days_Overdue__c &gt; 30 &amp;&amp; fc_csc__Days_Overdue__c &lt;= 60, &quot;31-60&quot;,
    IF (fc_csc__Days_Overdue__c &gt; 60 &amp;&amp; fc_csc__Days_Overdue__c &lt;= 90, &quot;61-90&quot;,
      IF (fc_csc__Days_Overdue__c &gt; 90, &quot;90+&quot;,
      &quot;0&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__Amount_Paid_via_Payment__c</fullName>
        <formula>fc_csc__Invoice_Payment__r.Zuora__ApplyAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Paid via Payment (deprecated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__Amount_Remaining__c</fullName>
        <formula>fc_csc__Amount_To_Pay__c -  fc_csc__Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__Amount_To_Pay__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount To Pay</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fc_csc__Date_Expected__c</fullName>
        <label>Date Expected</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fc_csc__Days_Overdue__c</fullName>
        <formula>IF(TEXT(fc_csc__Status__c) != &quot;Paid&quot;, TODAY() - fc_csc__Date_Expected__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fc_csc__Ignore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fc_csc__Invoice_Balance__c</fullName>
        <formula>fc_csc__Invoice__r.Zuora__Balance2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__Invoice_Number__c</fullName>
        <label>Invoice Number (deprecated)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Invoice_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Payment</label>
        <referenceTo>Zuora__PaymentInvoice__c</referenceTo>
        <relationshipLabel>Promises to Pay</relationshipLabel>
        <relationshipName>Promises_to_Pay</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fc_csc__Invoice__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Invoice</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Zuora__ZInvoice__c.Zuora__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.fc_csc__Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Zuora__ZInvoice__c.Zuora__Balance2__c</field>
                <operation>greaterThan</operation>
                <value>0</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Zuora__ZInvoice__c</referenceTo>
        <relationshipLabel>Promises to Pay</relationshipLabel>
        <relationshipName>Promises_to_Pay</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fc_csc__Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment (Deprecated)</label>
        <referenceTo>Zuora__Payment__c</referenceTo>
        <relationshipLabel>Promises to Pay</relationshipLabel>
        <relationshipName>Promises_to_Pay</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fc_csc__Status_Formula__c</fullName>
        <formula>IF(fc_csc__Amount_Remaining__c &lt;= 0, &quot;Paid&quot;,
IF(fc_csc__Amount_Remaining__c &gt; 0 &amp;&amp; fc_csc__Amount_Remaining__c &lt;  fc_csc__Amount_To_Pay__c, &quot;Partially Paid&quot;, &quot;Unpaid&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Paid</fullName>
                    <default>true</default>
                    <label>Not Paid</label>
                </value>
                <value>
                    <fullName>Partially Paid</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Promise to Pay</label>
    <nameField>
        <displayFormat>PAY-{000000000}</displayFormat>
        <label>Promise to Pay Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promises to Pay</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>